--- a/style.css
+++ b/style.css
@@ -1,26 +1,413 @@
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+
+/* Document
+   ========================================================================== */
+
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+
+ html {
+    line-height: 1.15; /* 1 */
+    -webkit-text-size-adjust: 100%; /* 2 */
+  }
+  
+  /* Sections
+     ========================================================================== */
+  
+  /**
+   * Remove the margin in all browsers.
+   */
+  
+  body {
+    margin: 0;
+  }
+  
+  /**
+   * Render the `main` element consistently in IE.
+   */
+  
+  main {
+    display: block;
+  }
+  
+  /**
+   * Correct the font size and margin on `h1` elements within `section` and
+   * `article` contexts in Chrome, Firefox, and Safari.
+   */
+  
+  h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+  }
+  
+  /* Grouping content
+     ========================================================================== */
+  
+  /**
+   * 1. Add the correct box sizing in Firefox.
+   * 2. Show the overflow in Edge and IE.
+   */
+  
+  hr {
+    box-sizing: content-box; /* 1 */
+    height: 0; /* 1 */
+    overflow: visible; /* 2 */
+  }
+  
+  /**
+   * 1. Correct the inheritance and scaling of font size in all browsers.
+   * 2. Correct the odd `em` font sizing in all browsers.
+   */
+  
+  pre {
+    font-family: monospace, monospace; /* 1 */
+    font-size: 1em; /* 2 */
+  }
+  
+  /* Text-level semantics
+     ========================================================================== */
+  
+  /**
+   * Remove the gray background on active links in IE 10.
+   */
+  
+  a {
+    background-color: transparent;
+  }
+  
+  /**
+   * 1. Remove the bottom border in Chrome 57-
+   * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+   */
+  
+  abbr[title] {
+    border-bottom: none; /* 1 */
+    text-decoration: underline; /* 2 */
+    text-decoration: underline dotted; /* 2 */
+  }
+  
+  /**
+   * Add the correct font weight in Chrome, Edge, and Safari.
+   */
+  
+  b,
+  strong {
+    font-weight: bolder;
+  }
+  
+  /**
+   * 1. Correct the inheritance and scaling of font size in all browsers.
+   * 2. Correct the odd `em` font sizing in all browsers.
+   */
+  
+  code,
+  kbd,
+  samp {
+    font-family: monospace, monospace; /* 1 */
+    font-size: 1em; /* 2 */
+  }
+  
+  /**
+   * Add the correct font size in all browsers.
+   */
+  
+  small {
+    font-size: 80%;
+  }
+  
+  /**
+   * Prevent `sub` and `sup` elements from affecting the line height in
+   * all browsers.
+   */
+  
+  sub,
+  sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+  }
+  
+  sub {
+    bottom: -0.25em;
+  }
+  
+  sup {
+    top: -0.5em;
+  }
+  
+  /* Embedded content
+     ========================================================================== */
+  
+  /**
+   * Remove the border on images inside links in IE 10.
+   */
+  
+  img {
+    border-style: none;
+  }
+  
+  /* Forms
+     ========================================================================== */
+  
+  /**
+   * 1. Change the font styles in all browsers.
+   * 2. Remove the margin in Firefox and Safari.
+   */
+  
+  button,
+  input,
+  optgroup,
+  select,
+  textarea {
+    font-family: inherit; /* 1 */
+    font-size: 100%; /* 1 */
+    line-height: 1.15; /* 1 */
+    margin: 0; /* 2 */
+  }
+  
+  /**
+   * Show the overflow in IE.
+   * 1. Show the overflow in Edge.
+   */
+  
+  button,
+  input { /* 1 */
+    overflow: visible;
+  }
+  
+  /**
+   * Remove the inheritance of text transform in Edge, Firefox, and IE.
+   * 1. Remove the inheritance of text transform in Firefox.
+   */
+  
+  button,
+  select { /* 1 */
+    text-transform: none;
+  }
+  
+  /**
+   * Correct the inability to style clickable types in iOS and Safari.
+   */
+  
+  button,
+  [type="button"],
+  [type="reset"],
+  [type="submit"] {
+    -webkit-appearance: button;
+  }
+  
+  /**
+   * Remove the inner border and padding in Firefox.
+   */
+  
+  button::-moz-focus-inner,
+  [type="button"]::-moz-focus-inner,
+  [type="reset"]::-moz-focus-inner,
+  [type="submit"]::-moz-focus-inner {
+    border-style: none;
+    padding: 0;
+  }
+  
+  /**
+   * Restore the focus styles unset by the previous rule.
+   */
+  
+  button:-moz-focusring,
+  [type="button"]:-moz-focusring,
+  [type="reset"]:-moz-focusring,
+  [type="submit"]:-moz-focusring {
+    outline: 1px dotted ButtonText;
+  }
+  
+  /**
+   * Correct the padding in Firefox.
+   */
+  
+  fieldset {
+    padding: 0.35em 0.75em 0.625em;
+  }
+  
+  /**
+   * 1. Correct the text wrapping in Edge and IE.
+   * 2. Correct the color inheritance from `fieldset` elements in IE.
+   * 3. Remove the padding so developers are not caught out when they zero out
+   *    `fieldset` elements in all browsers.
+   */
+  
+  legend {
+    box-sizing: border-box; /* 1 */
+    color: inherit; /* 2 */
+    display: table; /* 1 */
+    max-width: 100%; /* 1 */
+    padding: 0; /* 3 */
+    white-space: normal; /* 1 */
+  }
+  
+  /**
+   * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+   */
+  
+  progress {
+    vertical-align: baseline;
+  }
+  
+  /**
+   * Remove the default vertical scrollbar in IE 10+.
+   */
+  
+  textarea {
+    overflow: auto;
+  }
+  
+  /**
+   * 1. Add the correct box sizing in IE 10.
+   * 2. Remove the padding in IE 10.
+   */
+  
+  [type="checkbox"],
+  [type="radio"] {
+    box-sizing: border-box; /* 1 */
+    padding: 0; /* 2 */
+  }
+  
+  /**
+   * Correct the cursor style of increment and decrement buttons in Chrome.
+   */
+  
+  [type="number"]::-webkit-inner-spin-button,
+  [type="number"]::-webkit-outer-spin-button {
+    height: auto;
+  }
+  
+  /**
+   * 1. Correct the odd appearance in Chrome and Safari.
+   * 2. Correct the outline style in Safari.
+   */
+  
+  [type="search"] {
+    -webkit-appearance: textfield; /* 1 */
+    outline-offset: -2px; /* 2 */
+  }
+  
+  /**
+   * Remove the inner padding in Chrome and Safari on macOS.
+   */
+  
+  [type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
+  
+  /**
+   * 1. Correct the inability to style clickable types in iOS and Safari.
+   * 2. Change font properties to `inherit` in Safari.
+   */
+  
+  ::-webkit-file-upload-button {
+    -webkit-appearance: button; /* 1 */
+    font: inherit; /* 2 */
+  }
+  
+  /* Interactive
+     ========================================================================== */
+  
+  /*
+   * Add the correct display in Edge, IE 10+, and Firefox.
+   */
+  
+  details {
+    display: block;
+  }
+  
+  /*
+   * Add the correct display in all browsers.
+   */
+  
+  summary {
+    display: list-item;
+  }
+  
+  /* Misc
+     ========================================================================== */
+  
+  /**
+   * Add the correct display in IE 10+.
+   */
+  
+  template {
+    display: none;
+  }
+  
+  /**
+   * Add the correct display in IE 10.
+   */
+  
+  [hidden] {
+    display: none;
+  }
+
+/* Fin normalize CSS */
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+
 *{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin :0;
     padding: 0;
 }
 
-.logo{
-    float: left;
-    width: 200px;
-    height: 70px;
-}
+/* Header */
 
 header {
-    padding: 10px 20px 10px 20px;
-    height: 70px;
+    padding: 1em 3em 1em 3em;
 }
 
-header nav {
-    float: left;
+header nav ul {
+    list-style-type: none;
 }
 
-header .cta_header {
-    float: right;
+.flex_grid{
+    margin: 0 auto 0 auto;
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.grid_1_3 {
+    width: 33,33%;
+}
+
+header .grid_1_3{
+    text-align: right;
+}
+
+.grid_2_3{
+    width: 66,66%;
+}
+
+header .grid_2_3{
+    padding: 1.5em;
+}
+
+button{
+    color: #fff;
+    background-color: #FBAC17;
+    border: none;
+    padding: 1em 2em 1em 2em;
+    border-radius: 50px;
+}
+
+header button{
+    margin-bottom: 1em;
+}
+
+.phone_number{
+    color: #5399D3;
+    font-weight: 700;
+    font-size: 1.5em;
 }
 
 .clear{
@@ -31,84 +418,129 @@ header nav ul{
     list-style-type: none;
 }
 
-header nav li{
+header nav ul li{
+    display: inline;
+    margin-right: 3em;
+}
+
+header nav ul li a {
     color: #5399D3;
-    float: left;
-    margin-right: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.5em;
 }
 
-header nav li:hover{
-    color: orange;
-}
-
-.cta_header #cta_btn{
-    background-color: #FBAC17;
-    color: #ffffff;
-    border-radius: 20px;
-    text-align: center;
-    padding: 10px 20px 10px 20px;
-}
-
-.cta_header #cta_btn:hover{
-    background-color: red;
-}
-
-.cta_header #phone_number{
-    margin-top: 10px;
-    color: #5399D3;
-    text-align: center;
+header nav li a:hover{
+    color: #FBAC17;
 }
 
 .home_banner{
-    height: 50vh;
+    height: 75vh;
     background-image: url("images/fitgirl_home.png");
     background-repeat: no-repeat;
     background-position: right;
-    background-size: contain;
-    position: relative;
+    background-size: cover 80%;
+    display: grid;
+    place-items: center;
+}
+
+.circle {
+    z-index: -1000;
+    width: 40em;
+    height: 40em;
+    border-radius: 5000px;
+    background: #FBAC17;
+    position: absolute;
+    right: 11em;
+    top: 15em;
+}
+
+.blue{
+    background-color: #5399D3;
+}
+
+.home_banner button.test{
+    animation: pulse-orange 3s infinite;
+    font-size: 1em;
+    font-weight: bolder;
+}
+
+.home_banner button.test:hover{
+    background-color: #5399D3;
+    cursor: pointer;
+}
+
+.cta_box{
+    background-color: #a7bed3;
+    border-radius: 20px;
+    padding: 2em;
+    display: table-cell;
+}
+
+@keyframes pulse-orange {
+	0% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 #00000038;
+	}
+	
+	70% {
+		transform: scale(1.1);
+		box-shadow: 0 0 0 10px rgba(255, 121, 63, 0);
+	}
+	
+	100% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 ;
+	}
+}
+
+.home_banner button {
+    margin-right: 1.5em;
 }
 
 .banner_box{
-    position: absolute;
-    width: 500px;
-    top: 100px;
-    left: 100px; 
+    width: 50%;
+    margin: auto;
+    margin-left: 10%;
 }
 
 .banner_box h1 {
     color: #5399D3;
+    font-size: 3em;
+    margin-bottom: 0;
 }
 
 .banner_box h2 {
     color: #FBAC17;
+    font-size: 2.5em;
+    margin-bottom: 1em;
 }
 
 .banner_box p{
     color: #5399D3;
-    margin-bottom: 30px;
+    margin-bottom: 2em;
 }
 
 .banner_box a {
     text-decoration: none;
 }
 
-.btn_blue{
-    background-color: #5399D3;
-    color: #ffffff;
-    padding: 10px 20px 10px 20px;
-    border-radius: 20px;
-}
-
-.btn_orange{
-    background-color: #FBAC17;
-    color: #ffffff;
-    padding: 10px 20px 10px 20px;
-    border-radius: 20px;
-}
-
 section.activities{
-    background-color: #FBAC17;
     padding: 10px 20px 20px 10px;
+    transform: skewY(-2deg);
+    background-color: #FBAC17;
+    padding: 5em 0 5em 0;
+}
+
+section.activities h2{
+    transform: skewY(2deg);
+    margin-bottom: 2em;
+    font-size: 2em;
+}
+
+section.activities h3{
+    font-size: 2em;
+    margin-bottom: 0.5em;
 }
 
 .flex_3{
@@ -118,10 +550,29 @@ section.activities{
 
 section.activities article{
     flex-direction: column;
-    width: 500px;
+    width: 25%;
     background-color: white;
-    margin: 0 20px 20px 0px;
+    display: table-cell;
     text-align: center;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1); 
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1); 
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1);
+    transition: all 500ms ease-in;
+    cursor: pointer;
+}
+
+section.activities article:hover{
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.075); 
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.075); 
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.075);
+    transition: all 100ms ease-in;
+    cursor: pointer;
 }
 
 .activities h2{
@@ -136,24 +587,49 @@ section.activities article{
 
 .activities p{
     color: #5399D3;
+    transform: skewY(2deg);
 }
 
 .img_activite{
     box-sizing: border-box;
 }
 
+#boxe_img{
+    background-image: url("images/boxe_activite.jpg");
+    background-size: cover;
+    height: 20em;
+}
+
+#fitness_img{
+    background-image: url("images/fitness_activite.jpg");
+    background-size: cover;
+    height: 20em;
+}
+
+#crossfit_img{
+    background-image: url("images/crossfit_activite.jpg");
+    background-size: cover;
+    height: 20em;
+}
+
 .box_contain{
-    padding: 10px;
+    padding: 1em 1.5em 2em 1.5em;
 }
 
 section.coaches{
-    margin-top: 0px;
-    padding: 0 3em 0 3em;
+    max-width: 90%;
+    margin: 0 auto 0 auto;
+    margin-top: 3em;
+    padding: 0 6em 3em 6em;
+    transform: skewX(-5deg);
 }
 
 section.coaches h2{
     color: #5399D3;
     text-align: center;
+    font-size: 2em;
+    margin-bottom: 2em;
+    transform: skewX(5deg);
 }
 
 section.coaches .grid_coaches{
@@ -163,56 +639,82 @@ section.coaches .grid_coaches{
     grid-row-gap: 3em;
 }
 
-section.coaches div article{
-    height: 200px;
-    border-radius: 10px;
+section.coaches article{
+    height: 15em;
     background-color: #5399D3;
 }
 
-section.coaches div article div{
-    color: #ffffff;
-    width: 400px;
-    position: absolute;
-    top: 1em;
-    right: 5em;
+/*
+section.coaches article:hover{
+    transform: scale(1.025);
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.025); 
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.025); 
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.025);
+    transition: all 100ms ease-in;
+    cursor: pointer;
+}
+*/
+
+section.coaches .grid_coaches article div {
+    color: #fff;
+    width: 50%;
+    height: 15em;
+    float: right;
+}
+
+section.coaches div article .img_coach{
+    float: left;
+    height: 15em;
+    width: 50%;
+}
+
+section.coaches div article div h3{
     text-align: center;
+    margin-bottom: 0.25em;
+    margin-top: 8vh;
+    transform: translateY(-50%);
+    font-size: 1.5em;
+    transform: skewX(5deg);
 }
 
 section.coaches div article div h4{
-    border-bottom: solid 2px #ffffff;
-    padding-bottom: 2em;
+    text-align: center;
+    transform: translateY(-50%);
+    font-weight: 400;
+    transform: skewX(5deg);
 }
 
 #jerome_mazuret{
     background-image: url("images/jerome_mazuret.jpg");
     background-repeat: no-repeat;
-    position: relative;
+    background-position-x: -10em;
 }
 
 #julia_modiano{
     background-image: url("images/julia_modiano.jpg");
     background-repeat: no-repeat;
-    position: relative;
+    background-position-x: -15em;
 }
 
 #remy_tobin{
     background-image: url("images/remy_tobin.jpg");
     background-repeat: no-repeat;
     background-position-y: -2em;
-    position: relative;
+    background-position-x: -7em;
 }
 
 #eglantine_laroche{
     background-image: url("images/eglantine_laroche.jpg");
     background-repeat: no-repeat;
     background-position-y: -7em;
-    position: relative;
+    background-position-x: -7em;
 }
 
 .social_ico_coaches{
     list-style-type: none;
-    text-align: center;
-    width: 300px;
 }
 
 .social_ico_coaches li{
@@ -224,6 +726,17 @@ section.testimonials{
     margin-top: 2em;
     padding: 2em 3em 3em 3em;
     text-align: center;
+}
+
+.scrolling_wrapper_testimonials{
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: hidden;
+    touch-action: pan-x;
+}
+
+.scrolling_wrapper_testimonials article{
+    flex: 0 0 auto;
 }
 
 section.testimonials h2{
