--- a/style.css
+++ b/style.css
@@ -358,7 +358,10 @@
     padding: 0;
 }
 
-/* Header */
+.useful_margin{
+    max-width: 70%;
+    margin: 0 auto 0 auto;
+}
 
 header {
     padding: 1em 3em 1em 3em;
@@ -397,7 +400,7 @@ button{
     background-color: #FBAC17;
     border: none;
     padding: 1em 2em 1em 2em;
-    border-radius: 50px;
+    outline-style:none;
 }
 
 header button{
@@ -406,8 +409,7 @@ header button{
 
 .phone_number{
     color: #5399D3;
-    font-weight: 700;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 .clear{
@@ -420,18 +422,20 @@ header nav ul{
 
 header nav ul li{
     display: inline;
-    margin-right: 3em;
+    margin-right: 1em;
 }
 
 header nav ul li a {
     color: #5399D3;
     text-decoration: none;
-    font-weight: bold;
-    font-size: 1.5em;
+    font-size: 1em;
+    padding: 1em;
 }
 
 header nav li a:hover{
-    color: #FBAC17;
+    color: #fff;
+    background-color: #FBAC17;
+    padding: 1em;
 }
 
 .home_banner{
@@ -451,7 +455,7 @@ header nav li a:hover{
     border-radius: 5000px;
     background: #FBAC17;
     position: absolute;
-    right: 11em;
+    right: 35em;
     top: 15em;
 }
 
@@ -461,20 +465,11 @@ header nav li a:hover{
 
 .home_banner button.test{
     animation: pulse-orange 3s infinite;
-    font-size: 1em;
-    font-weight: bolder;
 }
 
 .home_banner button.test:hover{
     background-color: #5399D3;
     cursor: pointer;
-}
-
-.cta_box{
-    background-color: #a7bed3;
-    border-radius: 20px;
-    padding: 2em;
-    display: table-cell;
 }
 
 @keyframes pulse-orange {
@@ -484,8 +479,8 @@ header nav li a:hover{
 	}
 	
 	70% {
-		transform: scale(1.1);
-		box-shadow: 0 0 0 10px rgba(255, 121, 63, 0);
+		transform: scale(1);
+		box-shadow: 0 0 0 20px rgba(255, 121, 63, 0);
 	}
 	
 	100% {
@@ -506,13 +501,13 @@ header nav li a:hover{
 
 .banner_box h1 {
     color: #5399D3;
-    font-size: 3em;
+    font-size: 2.5em;
     margin-bottom: 0;
 }
 
 .banner_box h2 {
     color: #FBAC17;
-    font-size: 2.5em;
+    font-size: 2em;
     margin-bottom: 1em;
 }
 
@@ -539,18 +534,18 @@ section.activities h2{
 }
 
 section.activities h3{
-    font-size: 2em;
+    font-size: 1.5em;
     margin-bottom: 0.5em;
 }
 
 .flex_3{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 section.activities article{
     flex-direction: column;
-    width: 25%;
+    margin: 2em;
     background-color: white;
     display: table-cell;
     text-align: center;
@@ -579,10 +574,12 @@ section.activities article:hover{
     flex-direction: row;
     flex-wrap: wrap;
     color: white;
+    transform: skewY(2deg);
 }
 
 .activities h3{
     color: orange;
+    transform: skewY(2deg);
 }
 
 .activities p{
@@ -617,11 +614,8 @@ section.activities article:hover{
 }
 
 section.coaches{
-    max-width: 90%;
     margin: 0 auto 0 auto;
     margin-top: 3em;
-    padding: 0 6em 3em 6em;
-    transform: skewX(-5deg);
 }
 
 section.coaches h2{
@@ -629,34 +623,20 @@ section.coaches h2{
     text-align: center;
     font-size: 2em;
     margin-bottom: 2em;
-    transform: skewX(5deg);
 }
 
 section.coaches .grid_coaches{
-    display : grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 3em;
-    grid-row-gap: 3em;
+    display : flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 section.coaches article{
+    width: 48%;
+    margin: 1em;
     height: 15em;
     background-color: #5399D3;
 }
-
-/*
-section.coaches article:hover{
-    transform: scale(1.025);
-    -webkit-transition: all 200ms ease-in;
-    -webkit-transform: scale(1.025); 
-    -ms-transition: all 200ms ease-in;
-    -ms-transform: scale(1.025); 
-    -moz-transition: all 200ms ease-in;
-    -moz-transform: scale(1.025);
-    transition: all 100ms ease-in;
-    cursor: pointer;
-}
-*/
 
 section.coaches .grid_coaches article div {
     color: #fff;
@@ -676,15 +656,13 @@ section.coaches div article div h3{
     margin-bottom: 0.25em;
     margin-top: 8vh;
     transform: translateY(-50%);
-    font-size: 1.5em;
-    transform: skewX(5deg);
+    font-size: 1em;
 }
 
 section.coaches div article div h4{
     text-align: center;
     transform: translateY(-50%);
     font-weight: 400;
-    transform: skewX(5deg);
 }
 
 #jerome_mazuret{
@@ -726,17 +704,86 @@ section.testimonials{
     margin-top: 2em;
     padding: 2em 3em 3em 3em;
     text-align: center;
+    position: relative;
+}
+
+section.testimonials h2{
+    font-size: 2em;
 }
 
 .scrolling_wrapper_testimonials{
     display: flex;
     flex-wrap: nowrap;
-    overflow-x: auto;
+    overflow-x: hidden;
     touch-action: pan-x;
+    -webkit-overflow-scrolling: touch;
+    padding: 2em 2em 2em 2em;
 }
 
 .scrolling_wrapper_testimonials article{
     flex: 0 0 auto;
+    background-color: #ffffff;
+    color: #5399D3;
+    margin: 0 2em 0 0;
+    padding: 2em;
+    width: 25%;
+    transform: skewY(-1deg);
+    transition: all 500ms ease-in;
+}
+
+.scrolling_wrapper_testimonials article:hover{
+    transform: skewY(-1deg) scale(1.05);
+    transition: all 100ms ease-in;
+}
+
+.scroll_btn{
+    z-index: 1000;
+    position: absolute;
+    top: 50%;
+    width: 70%;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #999999;
+}
+
+#scroll_left{
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    padding: 0.25em;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 3em;
+    transform: skewX(-5deg);  
+}
+
+#scroll_left:hover{
+    color: #5399D3;
+    background-color: rgba(255, 255, 255, 1);
+    -webkit-box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    -moz-box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    transform: skewX(-5deg);
+}
+
+#scroll_right{
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    padding: 0.25em;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 3em;
+    transform: skewX(-5deg);
+}
+
+#scroll_right:hover{
+    color: #5399D3;
+    background-color: rgba(255, 255, 255, 1);
+    -webkit-box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    -moz-box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    transform: skewX(-5deg);
 }
 
 section.testimonials h2{
@@ -745,20 +792,16 @@ section.testimonials h2{
     margin-bottom: 2em;
 }
 
-section.testimonials article{
-    background-color: #ffffff;
-    color: #5399D3;
-    border-radius: 10px;
-    margin: 0 1em 0 0;
-    padding: 2em;
-}
-
 section.testimonials article li{
     list-style-type: none;
 }
 
 section.testimonials article li:first-child{
     margin-bottom: 2em;
+}
+
+section.testimonials p{
+    transform: skewY(1deg);
 }
 
 .round{
@@ -772,44 +815,478 @@ section.testimonials article li:first-child{
 }
 
 section.calltoaction{
-    height: 50vh;
+    height: 60vh;
     background-image: url("images/cta_home.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    padding: 4em 0 0 0;
+}
+
+section.calltoaction .useful_margin div{
+    float: right;
+    text-align: right;
 }
 
 section.calltoaction h2{
     color: #ffffff;
     margin-bottom: 2em;
     font-size: 2em;
-    width: 28em;
 }
 
 section.calltoaction h3{
     color: #000000;
-    font-size: 2em;
-    width: 28em;
-}
-
-section.calltoaction div{
-    text-align: right;
-    position: absolute;
-    right: 2em;
-    top: 2em;
-}
-
-section.calltoaction .cta_btn_section{
-    background-color: #FBAC17;
-    color: #ffffff;
-    padding: 1em 2em 1em 2em;
-    border-radius: 50px;
     font-size: 1.5em;
-    text-align: center;
-    position: absolute;
-    top: 15em;
+    margin-bottom: 2em;
+}
+
+section.calltoaction button{
+    font-size: 1.25em;
+    font-weight: bold;
+    animation: pulse-orange-bis 2s infinite;
+}
+
+section.calltoaction button:hover{
+    background-color: #5399D3;
+    cursor: pointer;
+}
+
+@keyframes pulse-orange-bis {
+	0% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.432);
+	}
+	
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 20px rgba(255, 121, 63, 0);
+	}
+	
+	100% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 rgba(255, 121, 63, 0);
+	}
 }
 
 section.arguments{
-    height: 50vh;
+    padding: 2em 0 4em 0;
+    color: #5399d3;
+    position: relative;
+}
+
+section.arguments h2{
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 1em;
+}
+
+section.arguments p{
+    text-align: center;
+    margin-bottom: 7em;
+}
+
+section.arguments .numbers{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.5em;
+}
+
+.nbr_strg{
+    font-size: 2em;
+    font-weight: bold;
+}
+
+section.arguments .numbers div{
+    text-align: center;
+}
+
+.satisfaction_circle {
+    width: 9em;
+    height: 9em;
+    border-radius: 5000px;
+    border: 0.25em solid #FBAC17;
+    display: table-cell;
+}
+
+.satisfaction_circle p{
+    margin-top: 1.25em;
+    color: #FBAC17;
+}
+
+.fa-star{
+    color: #FBAC17;
+    font-size: 2em;
+    margin-top: 0.35em;
+    background-color: #fff;
+}
+
+.prcnt{
+    font-size: 3em;
+    font-weight: bold;
+}
+
+section.offers{
+    padding: 2em 2em 6em 2em;
+    position: relative;
+    background-color: #FBAC17;
+}
+
+section.offers h2{
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 0.5em;
+    color: #fff;
+}
+
+section.offers p{
+    text-align: center;
+    color: #fff;
+    margin-bottom: 4em;
+}
+
+section.offers .offers_box{
+    display: flex;
+    justify-content: space-between;
+}
+
+section.offers .offers_box h2{
+    font-size: 1.5em;
+    text-align: center;
+    margin-bottom: 0.5em;
+    color: #fff;
+}
+
+section.offers .offers_box article#bonus_scale{
+    transform: scale(1.075) skewY(-1deg);
+}
+
+section.offers .offers_box article{
+    margin: 2em;
+    padding: 1em;
+    background-color: #fff;
+    transform: skewY(-1deg);
+    width: 33%;
+}
+
+section.offers .offers_box article div{
+    background-color: #FBAC17;
+}
+
+section.offers .offers_box article p{
+    background-color: #5399d3;
+    display: table-cell;
+    padding: 1em;
+    color: #fff;
+}
+
+section.offers .offers_box article .featured{
+    float: right;
+    background-color: #62d353;
+    font-weight: bold;
+    font-size: 1em;
+    animation: pulse-green 2s infinite;
+}
+
+@keyframes pulse-green {
+	0% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 #62d3539a;
+	}
+	
+	70% {
+		transform: scale(1.05);
+		box-shadow: 0 0 0 20px rgba(255, 121, 63, 0);
+	}
+	
+	100% {
+		transform: scale(1);
+		box-shadow: 0 0 0 0 rgba(255, 121, 63, 0);
+	}
+}
+
+.fa-heart{
+    margin-right: 0.5em;
+}
+
+section.offers .offers_box article h2{
+    color: #fff;
+    padding: 1em;
+    margin: 0 auto 0 auto;
+}
+
+section.offers .offers_box article h3{
+    color: #000000;
+    padding: 1em;
+    text-align: center;
+}
+
+section.offers .offers_box article button{
+    border-radius: 0;
+    float: right;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+section.offers .offers_box article button:hover{
+    transform: scale(1.075);
+    cursor: pointer;
+}
+
+.img_offers{
+    height: 20vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#img_first{
+    background-image: url("images/img_first.jpg");
+    background-position-y: -5em;
+}
+
+#img_together{
+    background-image: url("images/img_together.jpg");
+}
+
+#img_premium{
+    background-image: url("images/img_premium.jpg");
+    background-position-y: -10em;
+}
+
+section.contact{
+    padding: 2em 0 4em 0;
+}
+
+section.contact .useful_margin h2{
+    text-align: center;
+    font-size: 2em;
+    color: #FBAC17;
+    margin-bottom: 2em;
+}
+
+section.contact .useful_margin .flex_2{
+    display: flex;
+    justify-content: space-between;
+}
+
+section.contact .useful_margin .flex_2 .flex_050{
+    width: 50%;
+}
+
+section.contact .useful_margin .flex_2 div h3{
+    color: #FBAC17;
+    text-align: center;
+    margin: 0 0 1em 0;
+    font-size: 1.5em;
+    font-weight: 400;
+}
+
+section.contact .useful_margin .flex_2 div ul{
+    list-style-type: none;
+    color: #FBAC17;
+    font-size: 1.5em;
+    margin-top: 1em;
+}
+
+section.contact .useful_margin .flex_2 div ul li{
+    margin-bottom: 1em;
+}
+
+section.contact .useful_margin form label{
+    color: #FBAC17;
+    font-size: 1.25em;
+}
+
+section.contact .useful_margin form .champ{
+    width: 92%;
+}
+
+section.contact .useful_margin form input{
+    background-color: #FBAC17;
+    color: #fff!important;
+    border: none;
+    padding: 1em;
+    margin-bottom: 1em;
+}
+
+section.contact .useful_margin form input:focus{
+    background-color: #5399d3;
+}
+
+section.contact .useful_margin form textarea{
+    background-color: #FBAC17;
+    color: #fff;
+    border: none;
+    padding: 1em;
+    margin-bottom: 1em;
+    resize: vertical;
+}
+
+section.contact .useful_margin form textarea:focus{
+    background-color: #5399d3;
+}
+
+::placeholder {
+    color: #fff;
+    font-style: italic;
+}
+
+/* Radio bouton */
+.selected-content{
+    text-align: center;
+    box-shadow: 0 2px 4px 0 rgba(219, 215, 215, 0);
+    background: #FBAC17;
+    padding: 0.75em;
+    transition: .3s ease-in-out all;
+    cursor: pointer;
+}
+
+.selected-content p {
+    font-size: 1em;
+    text-align: center;
+    color: #fff;
+    margin: 0 0 0 2em;
+}
+
+.selected-label{
+    position: relative;
+}
+.selected-label input{
+    display: none;
+}
+.selected-label .icon{
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    transition: .3s ease-in-out all;
+    transform: scale(1);
+    z-index: 1;
+    cursor: pointer;
+}
+.selected-label .icon:before{
+	content: "\2714";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	font-weight: 900;
+	font-size: 1emx;
+	color: #000;
+	text-align: center;
+	opacity: 0;
+	transition: .2s ease-in-out all;
+    transform: scale(2);
+}
+.selected-label input:checked + .icon{
+    background: #FBAC17;
+    border-color: #FBAC17;
+    transform: scale(1.2);
+}
+.selected-label input:checked + .icon:before{
+    color: #fff;
+    opacity: 1;
+    transform: scale(.8);
+}
+.selected-label input:checked ~ .selected-content{
+    box-shadow: 0 2px 4px 0 rgba(219, 215, 215, 0.5);
+    background-color: #5399d3;
+}
+.flex_radio_3{
+    display: flex;
+    flex-wrap: nowrap;
+    margin-bottom: 1em;
+}
+/* Fin Radio bouton */
+
+footer{
+    background-color: #FBAC17;
+    padding: 4em 2em 2em 2em;
+    color: #fff;
+}
+
+footer nav.nav_footer ul li{
+    margin-bottom: 0.5em;
+}
+
+footer nav.nav_sous{
+    margin: 0 0 2em 0;
+}
+
+footer nav.nav_sous ul li{
+    float: left;
+    margin-right: 1em;
+}
+
+footer div{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1em;
+}
+
+footer nav ul{
+    list-style-type: none;
+}
+
+.social_icns{
+    font-size: 4em;
+}
+
+.social_block ul{
+    list-style-type: none;
+}
+
+section.footer_bottom{
+    background-color: #fdbc42;
+    padding: 2em;
+    margin-top: 0;
+    color: #3a3a3a;
+}
+
+section.footer_bottom a{
+    text-decoration: none;
+    color: #fff;
+}
+
+section.footer_bottom .useful_margin{
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Button haut de page */
+.scrollToTopBtn {
+    background-color: #fff;
+    border: none;
+    color: #999999;
+    cursor: pointer;
+    font-size: 2em;
+    padding: 0.5em;
+    position: fixed;
+    bottom: 2em;
+    right: 2em;
+    /* keep it at the top of everything else */
+    z-index: 100;
+    /* hide with opacity */
+    opacity: 0;
+    /* also add a translate effect */
+    transform: translateY(100px);
+    /* and a transition */
+    transition: all .5s ease;
+    outline-style:none
+}
+
+.scrollToTopBtn:hover{
+    background-color: #5399D3;
+    color: rgba(255, 255, 255, 1);
+    -webkit-box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    -moz-box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    box-shadow: 7px 3px 66px -1px rgba(0,0,0,0.54);
+    outline-style:none
+}
+    
+.showBtn {
+    opacity: 1;
+    transform: translateY(0);
 }
