--- a/style.css
+++ b/style.css
@@ -350,21 +350,146 @@
 
 /* Fin normalize CSS */
 
+/*Media Queries */
+
+/* Pour les écrans 1600+ px */
+@media (min-width: 1600px) {
+    .useful_margin {
+      max-width: 70%;
+      margin: 0 auto 0 auto;
+    }
+    .scroll_btn{
+        width: 70%;
+    }
+}
+
+/* Pour les écrans de 1200px à 1599px */
+@media (min-width: 1200px) and (max-width: 1599px) {
+    .useful_margin {
+      max-width: 80%!important;
+      margin: 0 auto 0 auto;
+    }
+    .scroll_btn{
+        width: 80%;
+    }
+}
+
+/* Pour les écrans < 1199px */
+@media (max-width: 1199px){
+    .useful_margin{
+        max-width: 95%;
+        margin: 0 auto 0 auto;
+    }
+    .scroll_btn{
+        width: 95%;
+    }
+}
+
+/* Pour TOUS les écrans > 999px */
+@media (min-width: 1000px){
+    section.coaches .grid_coaches{
+        display : grid;
+        grid-template-columns: 2fr 2fr;
+        grid-gap: 1em;
+    }
+    .flex_3{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 2em ;
+    }
+    section.offers .offers_box{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+    }
+    section.arguments .numbers{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        align-items: center;
+        font-size: 1.5em;
+    }
+    section.arguments p{
+        text-align: center;
+        margin-bottom: 5em;
+    }
+    .circle {
+        width: 50vh;
+        height: 50vh;
+        border-radius: 50%;
+        background: #FBAC17;
+        background-image: url("images/fitgirl_home.png");
+        background-position-x:-15em ;
+        background-repeat: no-repeat;
+    }
+    .scrolling_wrapper_testimonials article{
+        width: 25%;
+    }
+    .flex_2{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1em;
+    }
+}
+
+/* Pour TOUS les écrans < 999px */
+@media (max-width: 999px){
+    section.coaches .grid_coaches{
+        display : grid;
+        grid-template-rows: auto;
+        grid-gap: 1em;
+    }
+    .flex_3{
+        display: grid;
+        grid-template-rows: auto;
+        grid-gap: 2em ;
+    }
+    section.offers .offers_box{
+        display: grid;
+        grid-template-rows: auto;
+        grid-gap: 1em;
+    }
+    section.arguments .numbers{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        align-items: center;
+        font-size: 1.5em;
+    }
+    section.arguments p{
+        text-align: center;
+        margin-bottom: 2em;
+    }
+    .circle {
+        width: 40vh;
+        height: 40vh;
+        border-radius: 50%;
+        background: #FBAC17;
+        background-image: url("images/fitgirl_home.png");
+        background-position-x:-15em ;
+        background-repeat: no-repeat;
+    }
+    .scrolling_wrapper_testimonials article{
+        width: 70%;
+    }
+    .flex_2{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 1em;
+    }
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 *{
     font-family: 'Poppins', sans-serif;
     margin :0;
     padding: 0;
-}
-
-.useful_margin{
-    max-width: 70%;
-    margin: 0 auto 0 auto;
+    scroll-behavior: smooth;
 }
 
 header {
-    padding: 1em 3em 1em 3em;
+    padding: 1em 0 1em 0;
+    background-color: #fff;
 }
 
 header nav ul {
@@ -403,6 +528,11 @@ button{
     outline-style:none;
 }
 
+header button:hover{
+    background-color: #5399D3;
+    cursor: pointer;
+}
+
 header button{
     margin-bottom: 1em;
 }
@@ -439,24 +569,36 @@ header nav li a:hover{
 }
 
 .home_banner{
-    height: 75vh;
-    background-image: url("images/fitgirl_home.png");
-    background-repeat: no-repeat;
-    background-position: right;
-    background-size: cover 80%;
-    display: grid;
-    place-items: center;
+    position: relative;
+    width: 100%;
+    height: 70vh;
 }
 
-.circle {
-    z-index: -1000;
-    width: 40em;
-    height: 40em;
-    border-radius: 5000px;
-    background: #FBAC17;
+#vid{
+    z-index: -10000;
     position: absolute;
-    right: 35em;
-    top: 15em;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    width: auto;
+    height: auto; 
+}
+
+.banner_box{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.circle_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .blue{
@@ -470,33 +612,6 @@ header nav li a:hover{
 .home_banner button.test:hover{
     background-color: #5399D3;
     cursor: pointer;
-}
-
-@keyframes pulse-orange {
-	0% {
-		transform: scale(1);
-		box-shadow: 0 0 0 0 #00000038;
-	}
-	
-	70% {
-		transform: scale(1);
-		box-shadow: 0 0 0 20px rgba(255, 121, 63, 0);
-	}
-	
-	100% {
-		transform: scale(1);
-		box-shadow: 0 0 0 0 ;
-	}
-}
-
-.home_banner button {
-    margin-right: 1.5em;
-}
-
-.banner_box{
-    width: 50%;
-    margin: auto;
-    margin-left: 10%;
 }
 
 .banner_box h1 {
@@ -521,10 +636,10 @@ header nav li a:hover{
 }
 
 section.activities{
-    padding: 10px 20px 20px 10px;
     transform: skewY(-2deg);
     background-color: #FBAC17;
     padding: 5em 0 5em 0;
+    z-index: 100;
 }
 
 section.activities h2{
@@ -538,14 +653,7 @@ section.activities h3{
     margin-bottom: 0.5em;
 }
 
-.flex_3{
-    display: flex;
-    justify-content: space-between;
-}
-
 section.activities article{
-    flex-direction: column;
-    margin: 2em;
     background-color: white;
     display: table-cell;
     text-align: center;
@@ -625,15 +733,7 @@ section.coaches h2{
     margin-bottom: 2em;
 }
 
-section.coaches .grid_coaches{
-    display : flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 section.coaches article{
-    width: 48%;
-    margin: 1em;
     height: 15em;
     background-color: #5399D3;
 }
@@ -674,7 +774,7 @@ section.coaches div article div h4{
 #julia_modiano{
     background-image: url("images/julia_modiano.jpg");
     background-repeat: no-repeat;
-    background-position-x: -15em;
+    background-position-x: -10em;
 }
 
 #remy_tobin{
@@ -718,6 +818,7 @@ section.testimonials h2{
     touch-action: pan-x;
     -webkit-overflow-scrolling: touch;
     padding: 2em 2em 2em 2em;
+    scroll-snap-type: x mandatory;
 }
 
 .scrolling_wrapper_testimonials article{
@@ -726,7 +827,6 @@ section.testimonials h2{
     color: #5399D3;
     margin: 0 2em 0 0;
     padding: 2em;
-    width: 25%;
     transform: skewY(-1deg);
     transition: all 500ms ease-in;
 }
@@ -740,7 +840,6 @@ section.testimonials h2{
     z-index: 1000;
     position: absolute;
     top: 50%;
-    width: 70%;
     left: 50%;
     transform: translateX(-50%);
     color: #999999;
@@ -843,7 +942,7 @@ section.calltoaction h3{
 section.calltoaction button{
     font-size: 1.25em;
     font-weight: bold;
-    animation: pulse-orange-bis 2s infinite;
+    animation: pulse-orange 2s infinite;
 }
 
 section.calltoaction button:hover{
@@ -851,7 +950,7 @@ section.calltoaction button:hover{
     cursor: pointer;
 }
 
-@keyframes pulse-orange-bis {
+@keyframes pulse-orange {
 	0% {
 		transform: scale(1);
 		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.432);
@@ -880,18 +979,6 @@ section.arguments h2{
     margin-bottom: 1em;
 }
 
-section.arguments p{
-    text-align: center;
-    margin-bottom: 7em;
-}
-
-section.arguments .numbers{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-size: 1.5em;
-}
-
 .nbr_strg{
     font-size: 2em;
     font-weight: bold;
@@ -906,7 +993,7 @@ section.arguments .numbers div{
     height: 9em;
     border-radius: 5000px;
     border: 0.25em solid #FBAC17;
-    display: table-cell;
+    margin: auto;
 }
 
 .satisfaction_circle p{
@@ -927,7 +1014,7 @@ section.arguments .numbers div{
 }
 
 section.offers{
-    padding: 2em 2em 6em 2em;
+    padding: 2em 0 4em 0;
     position: relative;
     background-color: #FBAC17;
 }
@@ -943,11 +1030,6 @@ section.offers p{
     text-align: center;
     color: #fff;
     margin-bottom: 4em;
-}
-
-section.offers .offers_box{
-    display: flex;
-    justify-content: space-between;
 }
 
 section.offers .offers_box h2{
@@ -966,7 +1048,6 @@ section.offers .offers_box article{
     padding: 1em;
     background-color: #fff;
     transform: skewY(-1deg);
-    width: 33%;
 }
 
 section.offers .offers_box article div{
@@ -1062,15 +1143,6 @@ section.contact .useful_margin h2{
     font-size: 2em;
     color: #FBAC17;
     margin-bottom: 2em;
-}
-
-section.contact .useful_margin .flex_2{
-    display: flex;
-    justify-content: space-between;
-}
-
-section.contact .useful_margin .flex_2 .flex_050{
-    width: 50%;
 }
 
 section.contact .useful_margin .flex_2 div h3{
@@ -1236,6 +1308,14 @@ footer nav ul{
 
 .social_block ul{
     list-style-type: none;
+}
+
+.fa-facebook-square{
+    font-size: 4em;
+}
+
+.fa-twitter-square{
+    font-size: 4em;
 }
 
 section.footer_bottom{
