--- a/style.css
+++ b/style.css
@@ -429,6 +429,18 @@
         grid-template-columns: repeat(2, 1fr);
         grid-gap: 1em;
     }
+    #vid{
+        z-index: -10000;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        bottom: 0;
+        min-width: 100%; 
+        min-height: 100%;
+        width: auto;
+        height: auto; 
+    }
 }
 
 /* Pour TOUS les écrans < 999px */
@@ -475,6 +487,9 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 1em;
+    }
+    #vid{
+        display: none;
     }
 }
 
@@ -572,19 +587,6 @@ header nav li a:hover{
     position: relative;
     width: 100%;
     height: 70vh;
-}
-
-#vid{
-    z-index: -10000;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
-    width: auto;
-    height: auto; 
 }
 
 .banner_box{
