--- a/style.css
+++ b/style.css
@@ -441,6 +441,9 @@
         width: auto;
         height: auto; 
     }
+    .home_banner{
+        height: 70vh;
+    }
 }
 
 /* Pour TOUS les écrans < 999px */
@@ -489,7 +492,28 @@
         grid-gap: 1em;
     }
     #vid{
+        z-index: -10000;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        bottom: 0;
+        min-width: 100%; 
+        min-height: 100%;
+        width: auto;
+        height: auto; 
+    }
+    .home_banner{
+        height: 70vh;
+    }
+}
+
+@media (max-width: 767px){
+    #vid{
         display: none;
+    }
+    .home_banner{
+        height: 50vh;
     }
 }
 
@@ -586,7 +610,6 @@ header nav li a:hover{
 .home_banner{
     position: relative;
     width: 100%;
-    height: 70vh;
 }
 
 .banner_box{
