--- a/style.css
+++ b/style.css
@@ -453,6 +453,14 @@
     .banner_box h2{
         font-size: 2em
     }
+    .flex_radio_3{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        margin-bottom: 1em;
+    }
+    .selected-content{
+        width: 70%;
+    }
 }
 
 /* Pour TOUS les écrans < 999px */
@@ -521,6 +529,14 @@
     .banner_box h2{
         font-size: 1.5em
     }
+    .flex_radio_3{
+        display: grid;
+        grid-template-columns: auto;
+        margin-bottom: 1em;
+    }
+    .selected-content{
+        width: 90%;
+    }
 }
 
 @media (max-width: 767px){
@@ -535,6 +551,9 @@
     }
     .banner_box h2{
         font-size: 1em
+    }
+    .selected-content{
+        width: 90%;
     }
 }
 
@@ -1248,20 +1267,19 @@ section.contact .useful_margin form textarea:focus{
 }
 
 /* Radio bouton */
+
 .selected-content{
-    text-align: center;
     box-shadow: 0 2px 4px 0 rgba(219, 215, 215, 0);
     background: #FBAC17;
-    padding: 0.75em;
+    padding: 20px;
     transition: .3s ease-in-out all;
     cursor: pointer;
 }
 
 .selected-content p {
     font-size: 1em;
-    text-align: center;
     color: #fff;
-    margin: 0 0 0 2em;
+    text-align: center;
 }
 
 .selected-label{
@@ -1270,32 +1288,7 @@ section.contact .useful_margin form textarea:focus{
 .selected-label input{
     display: none;
 }
-.selected-label .icon{
-    width: 20px;
-    height: 20px;
-    background-color: #fff;
-    border-radius: 50%;
-    position: absolute;
-    top: 15px;
-    left: 15px;
-    transition: .3s ease-in-out all;
-    transform: scale(1);
-    z-index: 1;
-    cursor: pointer;
-}
-.selected-label .icon:before{
-	content: "\2714";
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	font-weight: 900;
-	font-size: 1emx;
-	color: #000;
-	text-align: center;
-	opacity: 0;
-	transition: .2s ease-in-out all;
-    transform: scale(2);
-}
+
 .selected-label input:checked + .icon{
     background: #FBAC17;
     border-color: #FBAC17;
@@ -1310,11 +1303,7 @@ section.contact .useful_margin form textarea:focus{
     box-shadow: 0 2px 4px 0 rgba(219, 215, 215, 0.5);
     background-color: #5399d3;
 }
-.flex_radio_3{
-    display: flex;
-    flex-wrap: nowrap;
-    margin-bottom: 1em;
-}
+
 /* Fin Radio bouton */
 
 footer{
