--- a/style.css
+++ b/style.css
@@ -1370,15 +1370,15 @@ section.footer_bottom .useful_margin{
 
 /* Button haut de page */
 .scrollToTopBtn {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0);
     border: none;
     color: #999999;
     cursor: pointer;
-    font-size: 2em;
+    font-size: 1.5em;
     padding: 0.5em;
     position: fixed;
-    bottom: 2em;
-    right: 2em;
+    bottom: 1em;
+    right: 1em;
     /* keep it at the top of everything else */
     z-index: 100;
     /* hide with opacity */
