--- a/style.css
+++ b/style.css
@@ -386,6 +386,9 @@
         grid-template-columns: 2fr 2fr;
         grid-gap: 1em;
     }
+    .section.testimonials{
+        padding: 2em 3em 3em 3em;
+    }
     .flex_3{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -532,6 +535,9 @@
         grid-template-rows: auto;
         grid-gap: 1em;
     }
+    .section.testimonials{
+        padding: 2em 3em 3em 3em;
+    }
     .flex_3{
         display: grid;
         grid-template-rows: auto;
@@ -669,6 +675,12 @@
     }
     .banner_box h2{
         font-size: 1.5em
+    }
+    .section.testimonials{
+        padding: 2em 0 3em 0;
+    }
+    .scrolling_wrapper_testimonials article{
+        width: 100%;
     }
     .selected-content{
         width: 90%;
@@ -974,7 +986,6 @@ section.coaches div article .coach_name h4{
 section.testimonials{
     background-color: #5399D3;
     margin-top: 2em;
-    padding: 2em 3em 3em 3em;
     text-align: center;
     position: relative;
 }
