--- a/style.css
+++ b/style.css
@@ -677,7 +677,7 @@
         font-size: 1.5em
     }
     .section.testimonials{
-        padding: 2em 0 3em 0;
+        padding: 2em 1em 3em 1em;
     }
     .scrolling_wrapper_testimonials article{
         width: 100%;
