--- a/style.css
+++ b/style.css
@@ -678,6 +678,7 @@
     }
     .section.testimonials{
         padding: 2em 1em 3em 1em;
+        overflow: hidden;
     }
     .scrolling_wrapper_testimonials article{
         width: 100%;
