--- a/style.css
+++ b/style.css
@@ -929,7 +929,7 @@ section.coaches div article .coach_name{
     color: #fff;
     position: absolute; /* postulat de départ */
     top: 50%; left: 50%; /* à 50%/50% du parent référent */
-    transform: translate(10%, -50%);
+    transform: translate(0.5em, -50%);
 }
 
 section.coaches div article .coach_name h3{
